--- a/content/1.02_openfoam-handson.rst
+++ b/content/1.02_openfoam-handson.rst
@@ -30,21 +30,24 @@ General Information
  $ ls
  0 constant system
 
-where folder **0** includes the initial and boundary condition variables and the parameters
-for turbulence models. **constant** includes geometry information such as meshes (points,
-faces, boundary etc.), connections, STL files etc. **system** includes the various dictionaries
-(Dict) to set different parameters. For example, we can modify the following files
+The folder **0** includes the initial and boundary conditions for the flow quantities.
+In **constant/polyMesh** the computational mesh is stored.
+The files **transportProperties** and **turbulenceProperties** in **constant** are used to define the material properties
+of the fluid and the turbulence modelling approach, respectively.
+Additional data like STL files is also stored in **constant**.
+The **system** folder includes the various dictionaries (Dict) that control different aspects of the simulation.
+For example, we can modify the following files
 
-- **system/blockMeshDict**: to set the block size.
-- **system/snappyHexMeshDict**: to set parameters for snappyHexMesh
-- **system/decomposeParDict** : to split mesh into submeshes for every MPI-rank
+- **system/blockMeshDict**: to control the block-structrued mesher **blockMesh**.
+- **system/snappyHexMeshDict**: to set the parameters for snappyHexMesh, another mesher shipped with **OpenFOAM**.
+- **system/decomposeParDict** : to set the parameters of the domain decomposition used for running **OpenFOAM** in parallel.
 
 .. code:: bash
 
  numberOfSubdomains 16; // Set the number of used processes (16)?
  method scotch; // Set the partition method (scotch) ?
 
-- **system/controlDict**: control variables
+- **system/controlDict**: multiple simulation control parameters.
 
 .. code:: bash
 
@@ -55,7 +58,11 @@ faces, boundary etc.), connections, STL files etc. **system** includes the vario
  writeInterval 100; // Write results in files (per 100 steps)
  ...
 
-The general workflow for a OpenFOAM case is shown as follows
+- **system/fvSolution**: iterative solver and pressure-velocity coupling parameters.
+
+- **system/fvSchemes**: selection of numerical schemes.
+
+A typical workflow for an OpenFOAM case is schematically shown below
 
 .. code:: bash
 
@@ -71,8 +78,13 @@ The general workflow for a OpenFOAM case is shown as follows
  snappyHexMesh // create complex mesh (set by system/snappyHexMeshDict)
    |
    V
- simpleFOAM // run application(OpenFOAM solver) (set by system/controlDict)
+ simpleFoam // run application(OpenFOAM solver) (set by system/controlDict)
+   |
+   V
+ reconstructPar // Stitch together the solutions from  the submeshes
 
+ Of course, this can vary depending on what mesher you use, wether you run in parallel,
+ etc. There may also be additional pre- or post-processing steps.
 
 Case: Lid-driven cavity flow
 ============================
@@ -82,20 +94,31 @@ This case uses OpenFOAM to calculate the incompressible flow in a two-dimensiona
  .. image:: img/cavity2D_geometry.png
 
 
-The following tasks are suggested during this hands-on session. You can also follow the examples for some tasks below
+Here are some suggestions for this hands-on session.
 
-- Follow the instructions above to recap what we learned. Start by running on your laptop and inspecting results in paraview.
+- Follow the instructions below to recap what we learned during th lecture.
+  The material is written for the Tegner cluster, but you can start on your laptop for maximum interactivity.
 
-- Login to Tegner, load the openfoam module. Copy your cavity case to the cluster.
+- Although post-processing with Paraview is listed as optional (see last section in the hands-on), it is very highly recommended that
+  you install Paraview on your machine and inspect the results of the OpenFOAM simulations.
+  Of course, you can use another post-processor of your liking.
 
-- Book an interactive node and try running the case in serial.
-
-- Make a denser mesh, decompose the case to 24 processors and run in parallel. Reconstruct the case using reconstructPar.
+- At some point, do login to Tegner, and get comfortable with running on iteractive nodes.
 
 - Use the case as a sandbox to change various settings and play with the parameters. Use the "banana-trick" to learn about
-  ( possible options: change any dictionary keyword to "banana", the case will crash showing possible valid options for the keyword.)
+  possible options: change any dictionary keyword to "banana", the case will crash showing possible valid options for the keyword.
 
-Notice that OpenFOAM cases are not backward compatible. Please always copy cases from *$FOAM_TUTORIALS* of current version
+- If you have CFD experience, ask yourself: what settings would I typically need to change?
+  Then try to figure out what dictionaries and keywords correspond to that. The teachers are there to help!
+  Try also to dig online a little bit yourself: one of the course outcomes is that you should be able to continue develop your skills
+  on your own. 
+
+To use OpenFOAM on Tegner, we first need to load the appropriate module.
+This is followed by sourcing *$FOAM_BASHRC* to activate the OpenFOAM environment.
+The *$FOAM_TUTORIALS* will then store the path to the tutorial collection shipped with OpenFOAM.
+Note, you can also use the *tut* command to jump to the tutorial directory and look around.
+**Important:** Always copy the tutorial to a folder where you have full write permission, never execute tutorials inside *$FOAM_TUTORIALS*. 
+Also, as OpenFOAM cases are not always backward-compatible, please make sure to always copy cases from *$FOAM_TUTORIALS* of the current version you are using.
 
 .. code:: bash
 
@@ -128,7 +151,10 @@ Notice that OpenFOAM cases are not backward compatible. Please always copy cases
     ├── fvSolution
     ├── PDRblockMeshDict
 
-- The default setting is to run the application *simpleFoam* in serial with two-dimensional block size of (20×20×1). The case will run up to *0.5* with *0.005* per step, i.e. total 100 time steps. The middle results are stored in every 20 time steps. 
+- The default setting is to run the application *simpleFoam* in serial on a two-dimensional square mesh of size (20×20×1).
+  Note that all OpenFOAM cases are three-dimensional. For a two-dimensional case the third dimension has a single computational cell,
+  and special boundary conditions are employed.
+  The case will run up to time *0.5* with *0.005* per step, i.e. a total of 100 time steps. The simulation results are stored every 20 time steps. 
 
 
 Run the case by default
@@ -136,18 +162,19 @@ Run the case by default
 
 .. code:: bash
 
- $ source $FOAM_BASHRC
  $ blockMesh # create the equivalent mesh of (20x20x1)
  $ icoFoam > log.icoFoam
  $ ls
  0  0.1  0.2  0.3  0.4  0.5  constant  system
 
-Until now, you are able to run the OpenFOAM case of cavity flow on PDC cluster. 
+Congratulations, you were able to run your first OpenFOAM case on a PDC cluster! 
 
-Validating the model
---------------------
+Inspecting the log file
+-----------------------
 
- To make sure everything is OK we can the output logs from the OpenFOAM run, this will show if the run actually worked or not. there are outputs in the log.simpleFoam file
+To make sure everything is OK we can look at the output logs from the OpenFOAM run.
+This will show us if the run actually worked as intended.
+To do this, inspect *log.icoFoam* with your favorite editor or simply use commands like *tail*.
 
 .. code:: bash
 
@@ -165,9 +192,17 @@ Validating the model
 
  End
 
+There is quite a bit of information to be extracted from the logs, such as residuals of the iterative solvers and the Courant number.
+Depending on the simulation options, the logs may become more expressive, monitoring additional simulation aspects.
+
 Creating the finer mesh
 -----------------------
-We can increase the number of cells in the mesh by using *blockMesh*. In *system/blockMeshDict*, the default mesh size is *(20 20 1)*, 
+The cavity case is too tiny to make running in parallel a reasonable alternative.
+We will therefore make the mesh denser.
+An overview of OpenFOAM meshing will be given during day 2 of the workshop.
+For now, we just provide the instruction for refining without much explaination.
+In *system/blockMeshDict*, the default mesh size is set by the triple *(20 20 1)*, 
+in the following lines.
 
 .. code:: bash
 
@@ -176,21 +211,85 @@ We can increase the number of cells in the mesh by using *blockMesh*. In *system
     hex (0 1 2 3 4 5 6 7) (20 20 1) simpleGrading (1 1 1)
  );
 
-The mesh size can be refined to ex. *(40 40 1)*,
+So, to refine we can change it to e.g. *(100 100 1)*,
 
 .. code:: bash
 
  blocks
  (
-    hex (0 1 2 3 4 5 6 7) (40 40 1) simpleGrading (1 1 1)
+    hex (0 1 2 3 4 5 6 7) (100 100 1) simpleGrading (1 1 1)
  ); 
 
-And then rerun the command *blockMesh* and *icoFoam* to generate new results with the refine mesh
+And then rerun the command *blockMesh*.
 
 .. code:: bash
 
  $ blockMesh
- $ icoFoam > log.icoFoam.fine
+
+If you now run *icoFoam* you will notice that the solver is slow and that the Courant number is very high!
+
+.. code:: bash
+
+ Time = 0.01
+
+ Courant Number mean: 0.514905 max: 4.28024
+ smoothSolver:  Solving for Ux, Initial residual = 0.124381, Final residual = 9.84033e-06, No Iterations 374
+ smoothSolver:  Solving for Uy, Initial residual = 0.546347, Final residual = 9.89857e-06, No Iterations 402
+ DICPCG:  Solving for p, Initial residual = 0.937878, Final residual = 0.0449945, No Iterations 58
+ time step continuity errors : sum local = 0.00115914, global = -3.719e-19, cumulative = -1.47005e-18
+ DICPCG:  Solving for p, Initial residual = 0.887143, Final residual = 9.90418e-07, No Iterations 171
+ time step continuity errors : sum local = 2.39948e-08, global = -4.25067e-19, cumulative = -1.89512e-18
+ ExecutionTime = 0.54 s  ClockTime = 0 s
+
+This makes sense: we decreased the cell size, so to keep the Courant number reasonable we also need to change the time step.
+This is done by changing the value of the *deltaT* keyword in the *controlDict*.
+We can set the time-step to 0.0005.
+
+.. code:: bash
+
+ deltaT 0.0005;
+
+Creating the finer mesh
+-----------------------
+
+Let us now run the case in parallel.
+Inspecting *system/decomposeParDict*, we see that the case is set to be decomposed into 4 subdomains.
+
+.. code:: bash
+
+ numberOfSubdomains  4;
+
+We will leave this as is and now we can decompose the case and run in parallel.
+
+.. code:: bash
+
+ $ decomposePar
+
+This will create directories *processor0* to *processor3*, containing the subdomains.
+To run the case, execute the following command.
+
+.. code:: bash
+
+ $ mpirun -np 4 icoFoam -parallel > logfile.icoFoamParallel
+
+Upon completion we can reconstruct the solution on the whole domain:
+
+.. code:: bash
+  
+ $ reconstructPar -latestTime
+
+Here, the *-latestTime* flag tells the program to only reconstruct the last time-step.
+
+To do yourself:
+
+- Now that we decreased the time step there is a lot of output saved, look at e.g. *processor0*.
+  Change the *writeInterval* in the *controlDict* to reduce that.
+
+- Play around with mesh sizes and change *decomposeParDict* to run on a larger number of processors.
+
+- Go through https://www.pdc.kth.se/support/documents/run_jobs/job_scheduling.html#how-to-submit-jobs to learn how to
+  submit jobs to the cluster queue. Try to submit your cavity case as a short queued job.
+
 
 Increasing the Reynolds number
 ------------------------------
@@ -219,15 +318,21 @@ Increase the *endTime* from *0.5* to *2* so that *icoFoam*  run upto 2 seconds.
 
  $ icoFoam
 
-High Reynolds number flow (advanced)
-------------------------------------
+Turbulence modelling (optional)
+-------------------------------
 
 The need to increase spatial and temporal resolution then becomes impractical as the flow moves into the turbulent regime, where problems of solution stability may also occur. 
 Instead Reynolds-averaged simulation (RAS) turbulence models are used to solve for the mean 
-flow behaviour and calculate the statistics of the fluctuations. The standard k-epsilon model with wall functions will be used in this tutorial to solve the lid-driven cavity case with a Reynolds number of 10^4. Two extra variables are solved for: k, the turbulent kinetic energy, and epsilon, the turbulent dissipation rate. The additional equations and models for turbulent flow are implemented into a OpenFOAM solver called *pisoFoam*.
+flow behaviour and calculate the statistics of the fluctuations.
+The standard k-epsilon model with wall functions will be used in this tutorial to solve the lid-driven cavity case with a Reynolds number of 10^4.
+Two extra variables are solved for: k, the turbulent kinetic energy, and epsilon, the turbulent dissipation rate.
+The additional equations and models for turbulent flow are implemented into a OpenFOAM solver called *pisoFoam*.
+To setup the model you will need three additional files in the 0 directory: *nut*, *k*, *epsilon*.
+Create them by making a copy of the *p* file, and then modify them as needed.
 
-
-A range of wall function models is available in OpenFOAM that are applied as boundary conditions on individual patches. This enables different wall function models to be applied to different wall regions. The choice of wall function models are specified through the turbulent viscosity field, nu in the *0/nut* file:
+A range of wall function models is available in OpenFOAM that are applied as boundary conditions on individual patches.
+This enables different wall function models to be applied to different wall regions.
+The choice of wall function models are specified through the turbulent viscosity field, nut, in the *0/nut* file:
 
 .. code:: bash
 
@@ -254,8 +359,9 @@ A range of wall function models is available in OpenFOAM that are applied as bou
  }
 
 
-The user should now open the field files for *k* and *epsilon* ( in *0/k* and *0/epsilon*) and examine their boundary conditions. 
-For a wall boundary condition wall, *epsilon* is assigned an *epsilonWallFunction* boundary condition and a *kqRwallFunction* boundary condition is assigned to *k*. The latter is a generic boundary condition that can be applied to any field that are of a turbulent kinetic energy type, e.g. *k*, *q* or  Reynolds Stress *R* 
+You should should now open the field files for *k* and *epsilon* ( in *0/k* and *0/epsilon*) and set their boundary conditions. 
+For a wall boundary condition wall, *epsilon* is assigned an *epsilonWallFunction* boundary condition and a *kqRwallFunction* boundary condition is assigned to *k*.
+The latter is a generic boundary condition that can be applied to any field that are of a turbulent kinetic energy type, e.g. *k*, *q* or  Reynolds Stress *R* 
 
 
 Turbulence modelling includes a range of methods, e.g. *RAS* or large-eddy simulation (*LES*), that are provided in OpenFOAM. In most transient solvers, the choice of turbulence modelling method is selectable at run-time through the simulationType keyword in turbulenceProperties dictionary. The user can view this file in the constant directory:
@@ -289,15 +395,24 @@ Finally, you can run the case with commands:
  $ blockMesh
  $ pisoFoam
 
-Post-processing (advanced)
+Post-processing (optional)
 --------------------------
 
-The post-processing tool supplied with OpenFOAM is *paraFoam*, which is a wrapper of *paraview* (www.paraview.org).  The *paraFoam* post-processing is started by typing in the terminal from within the case directory with loading *paraview* module.
+The post-processing tool supplied with OpenFOAM is *paraFoam*, which is a wrapper of *paraview* (www.paraview.org).
+The *paraFoam* post-processing is started by typing in the terminal from within the case directory with loading *paraview* module.
 
 .. code:: bash
 
  $ module add paraview/5.8.1-gcc-7.2
  $ paraFoam
+ 
+Alternatively, if you can add an empty file inside the case directory. 
+
+.. code:: bash
+
+ $ touch case.foam
+
+You can now open this file with regular Paraview, and not *paraFoam*.
 
 .. image:: img/cavity2D_mesh.png
 
